Fri Sep 17 23:44:07 2010  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/xpath_parser.rb, test/rexml/test_xpath.rb:
	add missing method availability check. [ruby-core:32447]
	Reported by Wiebe Cazemier. Thanks!!!

Fri Sep 17 23:23:26 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_sax.rb: don't use thread and sleep to avoid slow test.

Fri Sep 17 23:10:44 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_core.rb: enable.

Fri Sep 17 22:46:02 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/: untabify.

Fri Sep 17 22:29:56 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/: fix fixture data path. All REXML tests are worked.

Fri Sep 17 22:15:15 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_listener.rb: remove needless codes.

Fri Sep 17 22:12:23 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/: import REXML tests from
	http://www.germane-software.com/repos/rexml/trunk/test/.
	Many tests are failed temporary. I'll fix them quickly. Sorry.

Fri Sep 17 16:48:49 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/io/console/test_io_console.rb (TestIO_Console::helper):
	  PTY.open is not guaranteed to work.  On my machine opening a
	  pty is prohibited via process control group.  On those cases
	  exceptions shall occur, and that doesn't mean our fault.
	  Skip those tests on such situations.

Fri Sep 17 08:30:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tracer.rb: count only non-internal libraries in stack trace,
	  ignoring custom_require.  [ruby-core:31858]

Fri Sep 17 02:18:41 2010  Akinori MUSHA  <knu@iDaemons.org>

	* tool/mkconfig.rb: Fix build with m4 1.4.15 generating duplicate
	  lines in config.status.  According to nobu, the mswin32 port may
	  depend on the piece of code in question, so the behavior is left
	  unchanged on mswin32.

Thu Sep 16 23:47:59 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_opendir): Pathname#opendir translated
	  from pathname.rb.
