@@ -1,3 +1,8 @@
+Sat Sep 18 20:09:51 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/pathname/pathname.c (path_each_entry): Pathname#each_entry
+	  translated from pathname.rb.
+
 Fri Sep 17 23:44:07 2010  Kouhei Sutou  <kou@cozmixng.org>
 
 	* lib/rexml/xpath_parser.rb, test/rexml/test_xpath.rb:
